@@ -11,14 +11,6 @@
       <properties />
       <executeOn event="beforeRun" target="build" runConfigurationType="Application" runConfigurationName="jEdit" />
     </buildFile>
-    <buildFile url="file://$PROJECT_DIR$/jars/LatestVersion/build.xml">
-      <additionalClassPath />
-      <antReference projectDefault="true" />
-      <customJdkName value="" />
-      <maximumHeapSize value="128" />
-      <maximumStackSize value="32" />
-      <properties />
-    </buildFile>
     <buildFile url="file://$PROJECT_DIR$/jars/MacOSX/build.xml">
       <additionalClassPath />
       <antReference projectDefault="true" />
@@ -89,7 +81,6 @@
     <scope name="jEdit Sourcefiles" pattern="file[jEdit]:org//*.java" />
     <scope name="Modes" pattern="file[jEdit]:modes//*.xml" />
     <scope name="Macros" pattern="file[jEdit]:macros//*.bsh" />
-    <scope name="LatestVersion Sourcefiles" pattern="file[LatestVersion]:*.java" />
     <scope name="MacOSX Sourcefiles" pattern="file[MacOSX]:macosx//*.java" />
     <scope name="QuickNotepad Sourcefiles" pattern="file[QuickNotepad]:*.java" />
     <option name="SKIP_IMPORT_STATEMENTS" value="false" />
@@ -284,8 +275,6 @@
   <component name="ProjectFileVersion" converted="true" />
   <component name="ProjectModuleManager">
     <modules>
-      <module fileurl="file://$PROJECT_DIR$/jars/LatestVersion/LatestVersion.iml" filepath="$PROJECT_DIR$/jars/LatestVersion/LatestVersion.iml" />
-      <module fileurl="file://$PROJECT_DIR$/jars/MacOSX/MacOSX.iml" filepath="$PROJECT_DIR$/jars/MacOSX/MacOSX.iml" />
       <module fileurl="file://$PROJECT_DIR$/jars/QuickNotepad/QuickNotepad.iml" filepath="$PROJECT_DIR$/jars/QuickNotepad/QuickNotepad.iml" />
       <module fileurl="file://$PROJECT_DIR$/jEdit.iml" filepath="$PROJECT_DIR$/jEdit.iml" />
     </modules>
